# openapi/openapi.yaml
@@ -182,6 +182,54 @@ paths:
               schema:
                 type: array
                 items: {$ref: '#/components/schemas/Project'}
+  /api/exercises/{exerciseId}/cqi-weights:
+    get:
+      tags: [cqi-weight-resource]
+      operationId: getWeights
+      parameters:
+      - name: exerciseId
+        in: path
+        required: true
+        schema: {type: integer, format: int64}
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema: {$ref: '#/components/schemas/CqiWeightsDTO'}
+    put:
+      tags: [cqi-weight-resource]
+      operationId: saveWeights
+      parameters:
+      - name: exerciseId
+        in: path
+        required: true
+        schema: {type: integer, format: int64}
+      requestBody:
+        content:
+          application/json:
+            schema: {$ref: '#/components/schemas/CqiWeightsDTO'}
+        required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema: {$ref: '#/components/schemas/CqiWeightsDTO'}
+    delete:
+      tags: [cqi-weight-resource]
+      operationId: resetWeights
+      parameters:
+      - name: exerciseId
+        in: path
+        required: true
+        schema: {type: integer, format: int64}
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema: {$ref: '#/components/schemas/CqiWeightsDTO'}
   /api/exercises/{exerciseId}/email-mappings:
     get:
       tags: [email-mapping-resource]
@@ -528,6 +576,14 @@ components:
       type: object
       properties:
         effortBalance: {type: number, format: double}
+        locBalance: {type: number, format: double}
+        ownershipSpread: {type: number, format: double}
+        temporalSpread: {type: number, format: double}
+    CqiWeightsDTO:
+      type: object
+      properties:
+        effortBalance: {type: number, format: double}
+        isDefault: {type: boolean}
         locBalance: {type: number, format: double}
         ownershipSpread: {type: number, format: double}
         temporalSpread: {type: number, format: double}
